<resources>
    <string name="app_name">Dick\'s House</string>
    <string name="settings_custom_title">Customize</string>
    <string name="settings_help_title">Help</string>
    <string name="anonymous_preference">Share Identity</string>
    <string name="anonymous_summary">Disable to keep your identity secret</string>
    <string name="mute_title">Mute notifications</string>
    <string name="mute_summary">Enable message notifications</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Set your username</string>
    <string name="setting_advanced">Advanced</string>
    <string name="screenshot_preference">Screen Security</string>
    <string name="screenshot_summary">Block screenshots inside the app</string>
    <string name="delete_title">Delete old messages</string>
    <string name="delete_summary">Delete messages 3 days or older</string>
    <string name="pref_appversion">Application version</string>
    <string name="app_version">1.0.0</string>
    <string name="faq_title_preference">FAQ</string>
    <string name="faq_summary_preference">Click to view frequently asked questions</string>
    <string name="contact_title_preference">Contact us</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_chat_window">ChatWindowActivity</string>
    <string name="title_activity_history">HistoryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
