<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory
    android:title="@string/settings_custom_title">

    <SwitchPreference
        android:key="setting_anonymous"
        android:title="@string/anonymous_preference"
        android:summary="@string/anonymous_summary"
        android:defaultValue="false"
        android:persistent="true"/>

    <SwitchPreference
        android:key="setting_mute"
        android:title="@string/mute_title"
        android:summary="@string/mute_summary"
        android:defaultValue="false"
        android:persistent="true"/>

    <EditTextPreference
        android:key="setting_username"
        android:title="@string/pref_username"
        android:summary="@string/pref_username_summary"
        android:persistent="true"
        />
    <PreferenceScreen
        android:title="@string/setting_advanced">

        <SwitchPreference
            android:key="setting_screenshot"
            android:title="@string/screenshot_preference"
            android:summary="@string/screenshot_summary"
            android:defaultValue="false"
            android:persistent="true"/>

        <SwitchPreference
            android:key="setting_delete"
            android:title="@string/delete_title"
            android:summary="@string/delete_summary"
            android:defaultValue="false"
            android:persistent="true"/>

        <EditTextPreference
            android:key="setting_appversion"
            android:enabled="false"
            android:title="@string/pref_appversion"
            android:persistent="true"
            />
    </PreferenceScreen>

</PreferenceCategory>

<PreferenceCategory
    android:title="@string/settings_help_title">

    <EditTextPreference
        android:key="faq_preference"
        android:enabled="false"
        android:title="@string/faq_title_preference"
        android:summary="@string/faq_summary_preference"/>

    <EditTextPreference
        android:key="contact_preference"
        android:title="@string/contact_title_preference"
        android:enabled="false"/>

</PreferenceCategory>

</PreferenceScreen>